@@ -1,18 +1,9 @@
-## Getting Started
+## (Prawie) Paint
+Program pozwala na rysowanie prostych kształtów (wektorowo), z możliwością zapisu i wczytania
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+# Instalacja
+## wymagane: javafx, java
 
-## Folder Structure
-
-The workspace contains two folders by default, where:
-
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+```
+javac --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml src/App.java
+java --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml App
